jac-tests/error_logs/control_flow/test_01_loops.jac.log
✖ Error: error[E0001]: Expected 'to', got 'NAME'
  --> /home/denis/Jaseci/jac-tests/control_flow/test_01_loops.jac:5:15
    3 | with entry {
    4 |     # 1. C-Style Loop Fracture (Missing keywords 'to' and 'by')
    5 |     for i = 0 i < 10 i += 1 {} # Error: Expected 'to'
      |               ^
    6 |     
    7 |     # 2. Python-style IF (Missing braces)
✖ Error: error[E0004]: Unexpected token in expression: '<'
  --> /home/denis/Jaseci/jac-tests/control_flow/test_01_loops.jac:5:17
    3 | with entry {
    4 |     # 1. C-Style Loop Fracture (Missing keywords 'to' and 'by')
    5 |     for i = 0 i < 10 i += 1 {} # Error: Expected 'to'
      |                 ^
    6 |     
    7 |     # 2. Python-style IF (Missing braces)
✖ Error: error[E0001]: Expected 'by', got 'INT'
  --> /home/denis/Jaseci/jac-tests/control_flow/test_01_loops.jac:5:19
    3 | with entry {
    4 |     # 1. C-Style Loop Fracture (Missing keywords 'to' and 'by')
    5 |     for i = 0 i < 10 i += 1 {} # Error: Expected 'to'
      |                   ^^
    6 |     
    7 |     # 2. Python-style IF (Missing braces)
